--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div id="container_exel" class="container_exel">
-    <h1 class="title_exel">Excel</h1> 
+    <div class="head_exel">
+      <h1 class="title_exel">Excel</h1> 
+      <button id="button_row" class="head_button">Добавить</button>
+      <button id="button_column" class="head_button">Добавить</button>
+    </div>
     <table class="table" id="table"> </table>
   </div>
      <script type="module" src="/main.js"></script>
