--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <div id="container_exel" class="container_exel">
     <div class="head_exel">
       <h1 class="title_exel">Excel</h1> 
-      <button id="button_row" class="head_button">Добавить</button>
-      <button id="button_column" class="head_button">Добавить</button>
+      <button id="button_row" class="head_button">add row</button>
+      <button id="button_column" class="head_button">add collum</button>
+      <button id="button_delete_row" class="head_button">delete row</button>
+      <button id="button_delete_column" class="head_button">delete collum</button>
     </div>
     <table class="table" id="table"> </table>
   </div>
